header fixed - page__nav-list wrap turned on

--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ button {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  max-width: 1352px;
+  width: 1352px;
   height: 100%;
 }
 
@@ -116,6 +116,7 @@ button {
 
 .page-nav__list {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
 }
 
